--- a/nginx/nginx.yaml
+++ b/nginx/nginx.yaml
@@ -2,9 +2,9 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: nginx-deployment
-  namespace: test
+  namespace: web
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: nginx
